--- a/.github/workflows/build-and-package.yaml
+++ b/.github/workflows/build-and-package.yaml
@@ -11,8 +11,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: |
-          apt install build-essential git cmake pkg-config libbz2-dev libxml2-dev libzip-dev libboost-all-dev lua5.2 liblua5.2-dev libtbb-dev
+        run: |          
+          sudo apt install build-essential git cmake pkg-config libbz2-dev libxml2-dev libzip-dev libboost-all-dev lua5.2 liblua5.2-dev libtbb-dev
       - name: Build osrm-backend
         run: |
           mkdir -p build
@@ -34,7 +34,7 @@ jobs:
           wget http://download.geofabrik.de/europe/austria-latest.osm.pbf
           wget http://download.geofabrik.de/europe/italy-latest.osm.pbf
                     
-          apt install osmium-tool
+          sudo apt install osmium-tool
           osmium merge austria-latest.osm.pbf italy-latest.osm.pbf -o austria-italy-latest.osm.pbf
           
           osrm-extract -p ../../profiles/car.lua austria-italy-latest.osm.pbf
